<resources>
    <string name="app_name">Adoptame</string>
    <string name="Usuario">Usuario</string>
    <string name="exampleuser">Juan123</string>
    <string name="Pass">Contraseña</string>
    <string name="examplepass">***</string>
    <string name="Entrar">Entrar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="Salir">Salir</string>
    <string name="tituloAplicacion">Adoptame</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="SMS">SMS</string>
    <string name="Story">Hola, soy [Nombre], un(a)
        [Especie] de [Edad] [Años/Meses].
        Soy de tamaño [Tamaño], peso [Peso] [kg/g]
        y tengo un carácter [Carácter].
        Me encuentro en [Ubicación].</string>
</resources>