<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_pet"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- CABECERA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/morado"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/tituloAplicacion"
            android:textColor="@color/blanco"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="@color/blanco" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/exampleuser"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- CUERPO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="0dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/blanco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="string/Name"
                    android:textColor="@color/blanco"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="string/Location"
                    android:textColor="@color/blanco"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonwsp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Whatsapp" />

                    <Button
                        android:id="@+id/buttonsms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/SMS" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/Story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Story"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/blanco" />
    </LinearLayout>

    <!-- FOOTER -->
    <Button
        android:id="@+id/Button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/morado"
        android:text="@string/Salir"
        android:textColor="@color/blanco" />

</LinearLayout>
